# project-manager-assistant

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_ADAPTER_PATTERN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  LICENSE  LOCALIZATION_ARCHITECTURE.md  README.md  fix_session_id.py  main.py  pyproject.toml  restart_fixes.sh  run.sh  team_test.json  test_real_sse.html  test_sse.html  test_sse_complete.html  worker.py
app/agent/: graph.py  state.py
app/agent/nodes/: __init__.py  allocate_team.py  analyze_dependencies.py  assess_risk.py  extract_tasks.py  generate_insights.py  schedule_tasks.py
app/api/: main.py
app/api/routers/: health.py  plan.py
app/core/: config.py  logging.py
app/prompts/: __init__.py  loader.py  templates.yml
app/schemas/: __init__.py  plan.py  responses.py  simple.py  task.py  team.py
app/services/: __init__.py  llm_service.py  model_adapter.py  task_queue.py
data/: project_description.md  team.csv
docs/: api-reference.md  architecture.md  deployment.md  plugin-development.md  user-guide.md
streamlit_app/: app.py  app_backup.py
tests/: llm.py  test_llm_integration.py  test_verify_llm_connection.py
tests/agent/: test_graph_integration.py  test_nodes.py
tests/api/: test_plan_endpoint.py
