[tool.poetry]
name = "project-manager-assistant"
version = "0.1.0"
description = "An AI agent that assists in project management tasks."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.1"
langgraph = "^0.1.1"
langchain-openai = "^0.1.8"
pandas = "^2.2.2"
plotly = "^5.22.0"
networkx = "^3.3"
pyvis = "^0.3.2"
openai = "^1.30.1"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
streamlit = "^1.35.0"
pyyaml = "^6.0.1"
redis = "^5.0.4"
rq = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "app"
]
